// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`basic example - calls custom resource lambda with correct props 1`] = `
{
  "DomainCertIxVpcDetails": {
    "DeletionPolicy": "Delete",
    "Properties": {
      "DomainName": "example.com",
      "ServiceToken": {
        "Ref": "SsmParameterValuesharedservicesacmlambdaArnv2C96584B6F00A464EAD1953AFF4B05118Parameter",
      },
    },
    "Type": "Custom::CertIssuingLambda",
    "UpdateReplacePolicy": "Delete",
  },
}
`;

exports[`full example - calls custom resource lambda with correct props 1`] = `
{
  "DomainCertIxVpcDetails": {
    "DeletionPolicy": "Delete",
    "Properties": {
      "CertificateIssuingRegion": "us-west-2",
      "DomainName": "example.com",
      "ServiceToken": {
        "Ref": "SsmParameterValuesharedservicesacmlambdaArnv2C96584B6F00A464EAD1953AFF4B05118Parameter",
      },
      "SubjectAlternativeNames": [
        "other-domain.com",
        "another-domain.com",
      ],
    },
    "Type": "Custom::CertIssuingLambda",
    "UpdateReplacePolicy": "Delete",
  },
}
`;
